@@ -1,16 +1,41 @@
 desktopdir = $(datadir)/applications
 dt_in_files = spacefm.desktop.in \
-	       spacefm-find.desktop.in \
-	       spacefm-folder-handler.desktop.in
+			spacefm-find.desktop.in \
+			spacefm-folder-handler.desktop.in
 desktop_DATA = $(dt_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
 DISTCLEANFILES = spacefm.desktop \
-		 spacefm-find.desktop \
-		 spacefm-folder-handler.desktop
+			spacefm-find.desktop \
+			spacefm-folder-handler.desktop
 
+if NO_PIXMAPS
+icon48dir = $(datadir)/icons/hicolor/48x48/apps
+icon48_DATA = \
+			spacefm.png \
+			spacefm-root.png \
+			spacefm-find.png \
+			spacefm-48-cube-blue.png \
+			spacefm-48-cube-green.png \
+			spacefm-48-cube-red.png \
+			spacefm-48-folder-blue.png \
+			spacefm-48-folder-red.png \
+			spacefm-48-pyramid-blue.png \
+			spacefm-48-pyramid-green.png \
+			spacefm-48-pyramid-red.png
+
+icon128dir = $(datadir)/icons/hicolor/128x128/apps
+icon128_DATA = \
+			spacefm-128-cube-blue.png \
+			spacefm-128-cube-green.png \
+			spacefm-128-cube-red.png \
+			spacefm-128-pyramid-blue.png \
+			spacefm-128-pyramid-green.png \
+			spacefm-128-pyramid-red.png
+else
 icondir = $(datadir)/pixmaps
-icon_DATA = spacefm.png \
+icon_DATA = \
+			spacefm.png \
 			spacefm-root.png \
 			spacefm-find.png \
 			spacefm-128-cube-blue.png \
@@ -27,6 +52,7 @@ icon_DATA = spacefm.png \
 			spacefm-48-pyramid-blue.png \
 			spacefm-48-pyramid-green.png \
 			spacefm-48-pyramid-red.png
+endif
 
 filedir = $(datadir)/spacefm
 uidir=$(filedir)/ui
