@@ -22,6 +22,7 @@ case "$1" in
     configure)
         update-mime-database /usr/share/mime > /dev/null
         update-desktop-database -q
+        gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor
     ;;
 
     abort-upgrade|abort-remove|abort-deconfigure)
