@@ -11,3 +11,6 @@
 
 %:
 	dh $@ 
+
+override_dh_auto_configure:
+	dh_auto_configure -- --disable-pixmaps
