@@ -4,6 +4,7 @@
     smart size display for free space and tasks closes #115
     case insensitive sort detect all created files #119
     fix Skip All in overwrite query
+    added configure option --disable-pixmaps to install icons to share/icons
 0.7.9:  2012-07-13:
     new threading for tasks
     network filesystem lag issues improved
